syntax = "proto3";

option go_package = "wit-grpc-test";

package witgrpctest;

message HelloRequest {
    string message = 1;
}

message HelloResponse {
    string message = 1;
}

service HelloService {
    rpc Hello(HelloRequest) returns (HelloResponse) {};
}